# CAS4133-LLaDA-Kor

./: .gitignore  Makefile  README.md  app.py  chat.py  eval_llada.py  generate.py  get_log_likelihood.py  pyproject.toml  train.sh
deepspeed/: zero1.json
models/: configuration_llada.py  modeling_llada.py
preprocess/: llada_preprocess.py  train_tokneizer_for_sft.py
train/: finetune.py  llada_trainer.py
visualization/: generate.py  html_to_png.py  visualization_paper.py  visualization_zhihu.py
