[project]
name = "llada"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "aphrodite>=0.1.4",
    "datasets>=3.6.0",
    "deepspeed>=0.16.7",
    "loguru>=0.7.3",
    "nvitop>=1.5.0",
    "peft>=0.15.2",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
    "wandb>=0.19.10",
]
